fix(frontend): balance overflow

--- a/frontend/src/pages/home/main-screen.css
+++ b/frontend/src/pages/home/main-screen.css
@@ -1,19 +1,12 @@
 .wallet-custom-styles p {
-  font-size: 0.8rem; /* 0.85rem=14px */
-  padding-left: 0.1rem; /* 1rem=16px */
-  white-space: nowrap;
+  font-size: 0.8rem;
+  padding-left: 0.1rem;
 }
 
 .wallet-custom-styles button {
-  font-size: 0.8rem; /* 14px */
+  font-size: 0.8rem;
   background: transparent !important;
   border: none !important;
   box-shadow: none !important;
   color: white !important;
-}
-
-.wallet-custom-styles > div {
-  display: flex;
-  align-items: center;
-  white-space: nowrap;
 }
